# Challenge-Generator-with-React-and-FastAPI

./: .gitignore  package-lock.json  package.json  pyproject.toml
backend/src/: app.py  utils.py
frontend/: .env
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
