[project]
name = "fastapi-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-sdk-python>=0.1.0",
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
